# Web-app-Quotes

./: .env  Dockerfile  README.md  compose.yaml  pyproject.toml
quotes/accounts/: forms.py  models.py  urls.py  views.py
quotes/accounts/migrations/: 0001_initial.py
quotes/accounts/static/accounts/: style.css
quotes/accounts/templates/accounts/: login.html  signup.html
quotes/authors/: forms.py  models.py  urls.py  views.py
quotes/authors/migrations/: 0001_initial.py  0002_alter_author_description.py
quotes/authors/templates/authors/: add.html  authorPage.html  details.html
quotes/main/: urls.py
quotes/main/management/commands/: migration_script.py
quotes/main/templates/main/: base.html  index.html
quotes/quote/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quote/migrations/: 0001_initial.py  0002_alter_quote_tags.py  0003_tag_unique_tag.py  0004_tag_counter.py
quotes/quote/templates/quote/: add_quote.html  quote_list.html  tags_quote.html
quotes/quote/templatetags/: tags_extras.py
quotes/quotes/: settings.py  urls.py
