[project]
name = "djangoweb"
version = "0.1.0"
description = ""
authors = [
    { name = "Arthur", email = "planck2909@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "ruff (>=0.14.10,<0.15.0)",
    "black (>=25.12.0,<26.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
